--- a/less/style.less
+++ b/less/style.less
@@ -1567,6 +1567,7 @@ a.btn-more {
 .padd-tb-90 {padding:90px 0;}
 .padd-tb-120 {padding:120px 0;}
 .padd-tb-150 {padding:150px 0;}
+.padd-tb-180 {padding:180px 0;}
 
 .padd-lr-10 {padding:0 10px;}
 .padd-lr-20 {padding:0 20px;}
