--- a/less/style.less
+++ b/less/style.less
@@ -1583,6 +1583,8 @@ a.btn-more {
 .padd-t-50 {padding-top:50px;}
 .padd-t-60 {padding-top:60px;}
 .padd-t-90 {padding-top:90px;}
+.padd-t-120 {padding-top:120px;}
+.padd-t-150 {padding-top:150px;}
 
 .padd-b-10 {padding-bottom:10px;}
 .padd-b-20 {padding-bottom:20px;}
@@ -1590,7 +1592,9 @@ a.btn-more {
 .padd-b-40 {padding-bottom:40px;}
 .padd-b-50 {padding-bottom:50px;}
 .padd-b-60 {padding-bottom:60px;}
+.padd-b-90 {padding-bottom:90px;}
 .padd-b-120 {padding-bottom:120px;}
+.padd-b-150 {padding-bottom:150px;}
 
 
 
